--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,20 @@
 [versions]
-agp = "8.1.2"
-kotlin = "1.9.10"
+agp = "8.2.0"
+kotlin = "1.9.20"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.2"
-activity-compose = "1.8.0"
+activity-compose = "1.8.2"
 compose-bom = "2023.10.01"
 appcompat = "1.6.1"
-material = "1.10.0"
+material = "1.11.0"
 timber = "5.0.1"
+kotlin-compiler-version = "1.5.5"
+jvm-target = "17"
+compile-sdk = "34"
+min-sdk = "21"
 
 dokka = "1.9.10"
 snapper = "0.3.0"
